# fw-heudiconv

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  fw-heudiconv.ipynb  fw_heudiconv_run.py  fwutil_job_run_local.py  grmpy_heuristic.py  manifest.json  paper.md  release.sh  requirements.txt  sequence_info.py  setup.cfg  setup.py  usage.ipynb
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: curation-issues--help--and-bugs.md
docs/source/: conf.py  demo.rst  environment.yml  heuristic.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt  stepbystep.rst  tips.rst  usage.rst
example_heuristics/: README.md  demo.py  multi-task_fmri.py
fw_heudiconv/: convert.py  generate.py  query.py  run.py
fw_heudiconv/backend_funcs/: asl_functions.py  convert.py  query.py
fw_heudiconv/cli/: clean.py  clear.py  curate.py  download.py  export.py  meta.py  reproin_check.py  run.py  tabulate.py  validate.py
fw_heudiconv/example_heuristics/: demo.py  multi-task_fmri.py  reproin_Upenn.py
fw_heudiconv/heuristics/: reproin.py
fw_heudiconv/testing/: data.py
testing/: data.py  fwutil_job_run_local2.py  grmpy_heuristic_testing.py  test_fwheudiconv.py
