[versioneer]
VCS = git
style = pep440
versionfile_source = fw_heudiconv/_version.py
versionfile_build = fw_heudiconv/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/pennbbl/fw-heudiconv
author = The PennBBL developers
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = Matt Cieslak, Tinashe M. Tapera
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = Heudiconv-style curation of BIDS data on Flywheel
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
install_requires =
    flywheel-sdk
    numpy >=1.13.3
    pandas
    bids-validator
test_requires =
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.entry_points]
console_scripts =
    fw-heudiconv-curate=fw_heudiconv.cli.curate:main
    fw-heudiconv-export=fw_heudiconv.cli.export:main
    fw-heudiconv-tabulate=fw_heudiconv.cli.tabulate:main
    fw-heudiconv-clear=fw_heudiconv.cli.clear:main
    fw-heudiconv-validate=fw_heudiconv.cli.validate:main
    fw-heudiconv-meta=fw_heudiconv.cli.meta:main
    fw-heudiconv-reproin=fw_heudiconv.cli.reproin_check:main


[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
