[versioneer]
VCS = git
style = pep440
versionfile_source = fw_heudiconv/_version.py
versionfile_build = fw_heudiconv/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/pennbbl/fw-heudiconv
author = The PennBBL developers
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = Matt Cieslak, Tinashe M. Tapera
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = Heudiconv-style curation of BIDS data on Flywheel
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
install_requires =
    flywheel-sdk ~= 14.6.5
    bids-validator
    nibabel >=3.0.0
    indexed_gzip >=0.8.8
    nilearn !=0.5.0, !=0.5.1
    nipype >=1.3.1
    psutil >=5.4
    pybids ~= 0.9.3
    matplotlib <=2.2.3
    svgutils
    numpy
    dipy >= 1.0
    fury
    seaborn
    pandas
    pyyaml
    jinja2
    xvfbwrapper
    scikit-learn >=0.20.2
    scikit-image
    statsmodels
    nibabel
test_requires =
    coverage
    codecov
    pytest
    pytest-cov
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    dipy
    nbsphinx
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx <=2.2.0
    sphinx-argparse
    sphinx_rtd_theme
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk >=0.6.9
tests =
    coverage
    codecov
    pytest
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(sentry)s
    %(tests)s


[options.entry_points]
console_scripts =
    fw-heudiconv-curate=fw_heudiconv.cli.curate:main
    fw-heudiconv-export=fw_heudiconv.cli.export:main
    fw-heudiconv-tabulate=fw_heudiconv.cli.tabulate:main
    fw-heudiconv-clear=fw_heudiconv.cli.clear:main
    fw-heudiconv-validate=fw_heudiconv.cli.validate:main
    fw-heudiconv-meta=fw_heudiconv.cli.meta:main
    fw-heudiconv-reproin=fw_heudiconv.cli.reproin_check:main


[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
